Finish exercise hourCalculator

--- a/notes/hourCalculator.ipynb
+++ b/notes/hourCalculator.ipynb
@@ -1,37 +1,43 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "1fafecea-a692-46a3-b4f4-195c93b3d3e0",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "Q: Many people keep time using a 24 hour clock (11 is 11am and 23 is 11pm, 0 is midnight). If it is currently 13 and you set your alarm to go off in 50 hours, it will be 15 (3pm). Write a Python program to solve the general version of the above problem. Ask the user for the time now (in hours), and then ask for the number of hours to wait for the alarm. **Your program should output what the time will be on the clock when the alarm goes off.**"
-   ]
+    "Jose F. Brevil, Jr.\\\n",
+    "Student ID: 011064137\\\n",
+    "Submission Date: 08.28.25\\\n",
+    "Program: Lab 0\\\n",
+    "Sources Consulted:\n",
+    "* CIS 256 Week 1 Slides\n",
+    "* [Runestone Academy - How to Think Like a Computer Scientist: Interactive Edition](https://runestone.academy/ns/books/published/thinkcspy/)\n",
+    "* https://docs.python.org/3/library/time.html#time.localtime\n",
+    "* https://stackoverflow.com/questions/4432208/what-is-the-result-of-modulo-operator-percent-sign-in-python\n",
+    "* https://stackoverflow.com/questions/33191744/how-to-add-new-line-in-markdown-presentation\n",
+    "* https://anvilproject.org/guides/content/creating-links\n",
+    "\n",
+    "By submitting this work, I attest that it is my original work and that I did not violate\n",
+    "the University of Mississippi academic policies set forth in the M book or any\n",
+    "policies of the course.\n"
+   ],
+   "id": "da5e9cfa25c0f521"
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "id": "b22fae10c1f68cdf",
-   "metadata": {
-    "tags": [
-     "Logic"
-    ]
-   },
    "source": [
-    "# Logic:\n",
-    "\n",
-    "### Input: current_time (from a package), hours_until_alarm = input(int(current_time), input(int(hours_until_alarm)\n",
-    "### Processing: (current_time + hours_until_alarm) & 24\n",
-    "### Output: print(time_when_alarm_goes_off)\n",
-    "\n"
-   ]
+    "**Activity 2.13.6 ActiveCode:** \\\n",
+    "Many people keep time using a 24 hour clock (11 is 11am and 23 is 11pm, 0 is midnight). If it is currently 13 and you set your alarm to go off in 50 hours, it will be 15 (3pm). Write a Python program to solve the general version of the above problem. Ask the user for the time now (in hours), and then ask for the number of hours to wait for the alarm. **Your program should output what the time will be on the clock when the alarm goes off.**"
+   ],
+   "id": "1fafecea-a692-46a3-b4f4-195c93b3d3e0"
   },
   {
    "cell_type": "code",
    "id": "fee3518c01cd6632",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T05:28:03.010344Z",
-     "start_time": "2025-08-28T05:28:00.106254Z"
+     "end_time": "2025-08-28T14:57:10.969654Z",
+     "start_time": "2025-08-28T14:56:17.759518Z"
     }
    },
    "source": [
@@ -54,23 +60,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current hour is: 0\n",
+      "The current hour is: 9\n",
       "Calculating...\n",
-      "Your alarm will go off at hour 18\n"
+      "Your alarm will go off at hour 21\n"
      ]
     }
    ],
-   "execution_count": 30
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b49dfaf3eff56c65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Current issue: logic error– find the current formula "
-   ]
+   "execution_count": 32
   }
  ],
  "metadata": {
