--- a/notes/hourCalculator.ipynb
+++ b/notes/hourCalculator.ipynb
@@ -7,7 +7,7 @@
     "Jose F. Brevil, Jr.\\\n",
     "Student ID: 011064137\\\n",
     "Submission Date: 08.28.25\\\n",
-    "Program: Lab 0\\\n",
+    "Program: Activity 2.13.6\\\n",
     "Sources Consulted:\n",
     "* CIS 256 Week 1 Slides\n",
     "* [Runestone Academy - How to Think Like a Computer Scientist: Interactive Edition](https://runestone.academy/ns/books/published/thinkcspy/)\n",
@@ -36,8 +36,8 @@
    "id": "fee3518c01cd6632",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T14:57:10.969654Z",
-     "start_time": "2025-08-28T14:56:17.759518Z"
+     "end_time": "2025-08-30T04:05:56.263911Z",
+     "start_time": "2025-08-30T04:05:52.088715Z"
     }
    },
    "source": [
@@ -60,13 +60,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current hour is: 9\n",
+      "The current hour is: 23\n",
       "Calculating...\n",
-      "Your alarm will go off at hour 21\n"
+      "Your alarm will go off at hour 13\n"
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 1
   }
  ],
  "metadata": {
