--- a/notes/hourCalculator.ipynb
+++ b/notes/hourCalculator.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "da5e9cfa25c0f521",
+   "metadata": {},
    "source": [
     "Jose F. Brevil, Jr.\\\n",
     "Student ID: 011064137\\\n",
@@ -19,20 +20,20 @@
     "By submitting this work, I attest that it is my original work and that I did not violate\n",
     "the University of Mississippi academic policies set forth in the M book or any\n",
     "policies of the course.\n"
-   ],
-   "id": "da5e9cfa25c0f521"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "1fafecea-a692-46a3-b4f4-195c93b3d3e0",
+   "metadata": {},
    "source": [
     "**Activity 2.13.6 ActiveCode:** \\\n",
     "Many people keep time using a 24 hour clock (11 is 11am and 23 is 11pm, 0 is midnight). If it is currently 13 and you set your alarm to go off in 50 hours, it will be 15 (3pm). Write a Python program to solve the general version of the above problem. Ask the user for the time now (in hours), and then ask for the number of hours to wait for the alarm. **Your program should output what the time will be on the clock when the alarm goes off.**"
-   ],
-   "id": "1fafecea-a692-46a3-b4f4-195c93b3d3e0"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "fee3518c01cd6632",
    "metadata": {
     "ExecuteTime": {
@@ -40,6 +41,17 @@
      "start_time": "2025-08-30T04:05:52.088715Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current hour is: 23\n",
+      "Calculating...\n",
+      "Your alarm will go off at hour 13\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "current_time = time.localtime() # Setting current time from the time module\n",
@@ -54,26 +66,14 @@
     "time.sleep(1)\n",
     "print(f\"Your alarm will go off at hour {final_calculation}\")\n",
     "\n"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The current hour is: 23\n",
-      "Calculating...\n",
-      "Your alarm will go off at hour 13\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -85,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
